# projectThinking

./: README.md
catkin_ws/src/: .rosinstall
catkin_ws/src/demo/: CMakeLists.txt  README.md  pakage.xml
catkin_ws/src/demo/doc/doxygen/: doxy.config  readme.txt
catkin_ws/src/demo/include/demo/: demo.h
catkin_ws/src/demo/launch/: demo.launch
catkin_ws/src/demo/msg/: DemoMsg.msg
catkin_ws/src/demo/script/: depence_install.sh
catkin_ws/src/demo/src/: demo.cpp  demo_impl.cpp  demo_impl.h  main.cpp
catkin_ws/src/demo/utest/: demo_test.cpp
catkin_ws/src/pro_demo/include/demo/: demo.h
catkin_ws/src/pro_demo/src/: demo.cpp
issues/: issues.org
pro_demo/: README.md
pro_demo/src/: main.cpp
rules/: autoware_suggestion.org  coding_guide.org  coding_suggestion.org  recommendation.org  ros_handling_repos.md  software_develop_guide.org
skills/: Git.org  doxygen.org  editor_ros_style.org  googletest.org  skills.org  use_other_packages.org
snippets/: README.md
snippets/common/: int_to_string.cpp  rand.cpp
snippets/eigen/: matrix3d.cpp
snippets/opencv/: kalman_filter.cpp
snippets/pcl/: load_save_pcd.cpp
teaching/: outline.org
teaching/Lesson 1/better_software/: better_software.org  unix_philosophy.org
teaching/Lesson 1/encapsulation/: lib_encap.org
thinking/: clean_code.org  thinking.org
xiaojing/lessons/: lessons1.org
